platform: xenon: Added
Adds support for the Paricle Xenon board.
Adds Xenon to most of the basic applications.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/apps/low_power/Makefile
+++ b/apps/low_power/Makefile
@@ -3,7 +3,7 @@
 ##############################################################################
 
 PROJ_NAME     		:= low_power
-SUPPORTED_TARGETS 	:= thunderboard2 nrf52840dk bleatag argon
+SUPPORTED_TARGETS 	:= thunderboard2 nrf52840dk bleatag argon xenon
 
 ##############################################################################
 # Application Specific Flags
